--- a/hitcher/web/css/index.css
+++ b/hitcher/web/css/index.css
@@ -16,6 +16,13 @@
     border-radius: 2rem;
 }
 
+.btn-find-trip {
+    font-size: 1rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+    border-radius: 5rem;
+}
+
 .form-label-group {
     position: relative;
     margin-bottom: 1rem;
