--- a/hitcher/web/css/profile.css
+++ b/hitcher/web/css/profile.css
@@ -1,3 +1,24 @@
 body {
-    margin: 4rem;
+    margin: 5rem;
+}
+
+h3 {
+    margin-bottom: 50px;
+}
+
+.container {
+    padding-top: 30px;
+}
+
+.group-wrapper {
+    margin-bottom: 40px;
+}
+
+.nav-item {
+    margin-bottom: 20px;
+    border: 1px solid rgb(223, 223, 223);
+}
+
+.dropdown-item {
+    font-size: 14px;
 }
